# chimeralang-mcp

./: .gitignore  .mcp.json  .secrets.baseline  .trigger_workflow  AGENTS.md  BLUEPRINT.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/chimera/: SKILL.md
.github/: secret_scanning.yml
.github/workflows/: ci.yml  publish.yml
chimera/: __init__.py  ast_nodes.py  claude_adapter.py  cli.py  detect.py  integrity.py  lexer.py  parser.py  tokens.py  type_checker.py  types.py  vm.py
chimeralang_mcp/: __init__.py  __main__.py  ai_language.py  cli.py  envelope.py  persistence.py  protocol.py  replay.py  server.py  token_engine.py
chimeralang_mcp/materials/: __init__.py  builders.py  cli.py  loader.py
docs/: cost-savings-guide.md
docs/audits/: 2026-04-27-multi-agent-audit.md
docs/case-studies/: chimera-glyph-feature.md  cross-agent-protocol.md
docs/superpowers/specs/: 2026-04-20-chimeralang-token-engine-design.md
tests/: test_advanced_token_tools.py  test_ai_language.py  test_audit_regressions.py  test_batch_summarize.py  test_chimerabench.py  test_defect_fixes.py  test_envelope_features.py  test_glyph_benchmark.py  test_hook_and_verify_perf.py  test_materials_integration.py  test_new_stubs.py  test_protocol.py  test_regressions_072.py  test_replay_envelope.py  test_session_token_tools.py  test_skill_integrity.py  test_token_engine.py  test_tools.py
tests/benchmarks/: test_compression_quality.py
tests/benchmarks/fixtures/: sample_doc.md  sample_log.txt
tests/fixtures/: glyph_bench.txt
tools/: cost_savings_demo.py  cost_savings_results.json  glyph_benchmark.py  glyph_benchmark_results.json  glyph_spike.py  glyph_spike_results.json  lexicon_diff.json  optimize_lexicon.py  optimized_lexicon.py  protocol_demo.py
tools/chimerabench/: README.md  __init__.py  run.py
tools/chimerabench/tasks/deliberate-converge/: empty-perspectives.json  strong-agreement.json  three-way-split.json
tools/chimerabench/tasks/gate-only/: highest-confidence.json  strict-majority.json  weighted-vote-mixed.json
tools/chimerabench/tasks/mixed-pipeline/: deliberate-then-vote.json  two-gates-chained.json  verify-then-gate.json
tools/chimerabench/tasks/verify-pipeline/: multi-claim-mixed.json  no-evidence.json  single-supported.json
tools/chimerabench/tasks/vote-converge/: balanced-tie.json  single-response.json  strong-consensus.json
